--- a/src/sass/globals/_variables.scss
+++ b/src/sass/globals/_variables.scss
@@ -21,7 +21,7 @@
   :root {
     color-scheme: dark;
     --background: var(--clr-bg-dark);
-    --header-bg: var(--clr-bg-dark);
+    --header-bg: var(--clr-grey-800);
     --header-title: var(--clr-bg-light);
     --display-bg: var(--clr-display-bg-dark);
     --li-text: var(--clr-li-text-light);
