--- a/src/index.css
+++ b/src/index.css
@@ -235,6 +235,10 @@ input[type=checkbox]:focus-visible + .toggle-switch__slider {
   padding: 0 0 0 1rem;
 }
 
+.display__li-input[type=checkbox]:checked + .display__li-text {
+  text-decoration-line: line-through;
+}
+
 .display__li-input-wrapper {
   display: flex;
   flex-grow: 1;
