--- a/src/sass/globals/_base.scss
+++ b/src/sass/globals/_base.scss
@@ -30,6 +30,12 @@ button:hover {
   cursor: pointer;
   color: var(--btn-hover);
 }
+input[type="text"]:focus-visible,
+input[type="checkbox"]:focus-visible,
+button:focus-visible {
+  outline: dashed 3px #ff471a;
+  outline-offset: 5px;
+}
 
 .app-container {
   background: var(--background);
