--- a/src/sass/globals/_base.scss
+++ b/src/sass/globals/_base.scss
@@ -30,6 +30,12 @@ button:hover {
   cursor: pointer;
   color: var(--btn-hover);
 }
+
+input,
+button {
+  border-radius: 2px;
+}
+
 input[type="text"]:focus-visible,
 input[type="checkbox"]:focus-visible,
 button:focus-visible {
@@ -39,4 +45,10 @@ button:focus-visible {
 
 .app-container {
   background: var(--background);
+}
+
+.backdrop {
+  background: var(--display-bg);
+  border-radius: 5px;
+  margin: 0 1rem;
 }
