--- a/src/sass/components/_display.scss
+++ b/src/sass/components/_display.scss
@@ -10,7 +10,7 @@
   background: var(--display-bg);
   color: var(--li-text);
   font-size: 1rem;
-  padding: 0 0 0 1rem;
+  // padding: 0 0 0 1rem;
 
   &:hover {
     cursor: move;
@@ -43,7 +43,7 @@
 }
 
 .display__li-btn-delete {
-  padding: 0.5rem 1rem;
+  // padding: 0.5rem 1rem;
   color: inherit;
 
   &:hover .close-x {
@@ -80,8 +80,9 @@
   justify-content: center;
   gap: 1rem;
   background: var(--display-bg);
-  margin: 1rem 1.5rem;
+  margin: 1rem;
   height: 48px;
+  border-radius: 5px;
 
   &__btn {
     color: var(--dimmed);
