--- a/src/index.css
+++ b/src/index.css
@@ -278,7 +278,7 @@ input[type=checkbox]:focus-visible + .toggle-switch__slider {
 }
 
 .display__li-input[type=checkbox]:checked + .display__li-text {
-  text-decoration-line: line-through;
+  text-decoration: line-through;
 }
 
 .display__li-input-wrapper {
