--- a/src/index.css
+++ b/src/index.css
@@ -247,7 +247,7 @@ input[type=checkbox]:focus-visible + .toggle-switch__slider {
 
 .display__ul {
   list-style: none;
-  padding: 0 1.5rem;
+  padding: 0 1rem;
   margin: 0;
 }
 
@@ -305,15 +305,14 @@ input[type=checkbox]:focus-visible + .toggle-switch__slider {
 .status-bar {
   display: flex;
   justify-content: space-between;
-  padding: 0 0 0 1rem;
-  margin: 0 1.5rem;
   background: var(--display-bg);
   color: var(--dimmed);
   margin-top: 10px;
+  border-radius: 5px;
 }
 .status-bar__btn {
   color: var(--dimmed);
-  padding: 0 1.5rem;
+  margin: 0 1rem 0 0;
 }
 
 .filter {
