--- a/src/sass/components/_display.scss
+++ b/src/sass/components/_display.scss
@@ -1,6 +1,6 @@
 .display__ul {
   list-style: none;
-  padding: 0 1.5rem;
+  padding: 0 1rem;
   margin: 0;
 }
 
@@ -10,7 +10,6 @@
   background: var(--display-bg);
   color: var(--li-text);
   font-size: 1rem;
-  // padding: 0 0 0 1rem;
 
   &:hover {
     cursor: move;
@@ -42,7 +41,6 @@
 }
 
 .display__li-btn-delete {
-  // padding: 0.5rem 1rem;
   color: inherit;
 
   &:hover .close-x {
@@ -61,15 +59,14 @@
 .status-bar {
   display: flex;
   justify-content: space-between;
-  padding: 0 0 0 1rem;
-  margin: 0 1.5rem;
   background: var(--display-bg);
   color: var(--dimmed);
   margin-top: 10px;
+  border-radius: 5px;
 
   &__btn {
     color: var(--dimmed);
-    padding: 0 1.5rem;
+    margin: 0 1rem 0 0;
   }
 }
 
